# tracebox-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pre_start.py  pyproject.toml
app/: main.py
app/catalog/: deps.py
app/common/: dependencies.py
app/purchases/: deps.py
app/receivement/: deps.py
app/stock/: deps.py
app/supplier/: deps.py
migrations/: env.py  script.py.mako
migrations/versions/: 2024_07_21_1818-58656f789da8_feat_add_product_table.py  2024_08_06_0251-8768ce960212_add_address_table.py  2024_08_06_0839-3fb3489ce42d_feat_add_supplier_table.py  2024_08_12_2206-a9de9be8c913_add_product_table.py  2024_08_12_2228-d21559bae54c_add_packaging_table.py  2024_08_12_2249-8211398a9f77_add_id_packaging_to_product.py  2024_08_14_2059-14355b2275ab_add_asset_model.py  2024_08_15_1049-5f70a1b9e2a0_add_product_variety_model.py  2024_08_16_1729-2d7c3e26449d_add_purchase_order_table.py  2024_08_16_1737-3e6c6a3a4ee2_add_purchase_order_item_table.py  2024_08_27_2103-65244dda7ff9_add_purchase_order_receivement_table.py  2024_08_28_1208-4c763631523f_make_id_purchase_order_item_unique.py  2024_08_28_1230-e6acb6e00b0c_add_new_purchase_order_status.py  2024_08_28_1448-dc07d3946649_add_status_to_receivement_item.py  2024_09_08_2126-05e62f03001b_add_stock_table.py  2024_09_08_2256-2fae09c6b6f1_add_asset_lot_table.py  2024_09_15_1705-f7ce66c87ead_add_stock_transaction_table.py  2024_09_15_2126-05e62f03001b_add_stock_table.py
tests/: base_client.py  conftest.py
tests/supplier/: factories.py
(+87 files in other folders)
