[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Antonio Bertino de Vasconcelos Cabral Neto <antoniontv18@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12.4"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
sqlalchemy-utils = "^0.41.2"
pydantic = "^2.8.2"
prettyconf = "^2.2.1"
pre-commit = "^3.7.1"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.5"
pytest = "^8.3.1"
pytest-asyncio = "^0.23.8"
requests = "^2.32.3"
fastapi-pagination = "^0.12.26"
pendulum = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
